--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -16,23 +16,28 @@
         <ng-template pTemplate="caption">
           <div class="flex">
             <div class="status flex align-items-center">
-              <p-button styleClass="p-button-rounded p-button-text" (click)="toggleStatusFilter(0)" [ngClass]="{'status-focus': status[0].boolean}">
+              <p-button styleClass="p-button-rounded p-button-text" (click)="toggleStatusFilter(0)"
+                        [ngClass]="{'status-focus': status[0].boolean}">
                 <span class="text-400 pi pi-circle-fill mr-1"></span>
                 <span class="font-bold text-color">{{status[0].name}}</span>
               </p-button>
-              <p-button styleClass="p-button-rounded p-button-text" (click)="toggleStatusFilter(1)" [ngClass]="{'status-focus': status[1].boolean}">
+              <p-button styleClass="p-button-rounded p-button-text" (click)="toggleStatusFilter(1)"
+                        [ngClass]="{'status-focus': status[1].boolean}">
                 <span class="text-blue-300 pi pi-circle-fill mr-1"></span>
                 <span class="font-bold text-color">{{status[1].name}}</span>
               </p-button>
-              <p-button styleClass="p-button-rounded p-button-text" (click)="toggleStatusFilter(2)" [ngClass]="{'status-focus': status[2].boolean}">
+              <p-button styleClass="p-button-rounded p-button-text" (click)="toggleStatusFilter(2)"
+                        [ngClass]="{'status-focus': status[2].boolean}">
                 <span class="text-yellow-300 pi pi-circle-fill mr-1"></span>
                 <span class="font-bold text-color">{{status[2].name}}</span>
               </p-button>
-              <p-button styleClass="p-button-rounded p-button-text" (click)="toggleStatusFilter(3)" [ngClass]="{'status-focus': status[3].boolean}">
+              <p-button styleClass="p-button-rounded p-button-text" (click)="toggleStatusFilter(3)"
+                        [ngClass]="{'status-focus': status[3].boolean}">
                 <span class="text-orange-300 pi pi-circle-fill mr-1"></span>
                 <span class="font-bold text-color">{{status[3].name}}</span>
               </p-button>
-              <p-button styleClass="p-button-rounded p-button-text" (click)="toggleStatusFilter(4)" [ngClass]="{'status-focus': status[4].boolean}">
+              <p-button styleClass="p-button-rounded p-button-text" (click)="toggleStatusFilter(4)"
+                        [ngClass]="{'status-focus': status[4].boolean}">
                 <span class="text-green-300 pi pi-circle-fill mr-1"></span>
                 <span class="font-bold text-color">{{status[4].name}}</span>
               </p-button>
