--- a/src/app/views/features/opportunity/opportunity.component.html
+++ b/src/app/views/features/opportunity/opportunity.component.html
@@ -11,7 +11,7 @@
         </span>
         </div>
       </div>
-      <p-table #dt [value]="getData" [lazy]="true" [totalRecords]="totalRecords" [rows]="10000"  [rowsPerPageOptions]="[10, 20]" [paginator]="true"
+      <p-table #dt [value]="getData" [lazy]="true" [totalRecords]="totalRecords" [rows]="selectedRows"  [rowsPerPageOptions]="rowsPerPageOptions" [paginator]="true"
                (onLazyLoad)="loadTable($event)" [loading]="loading" currentPageReportTemplate="共 {totalRecords} 筆"
                [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
