--- a/src/app/views/features/contract/contract.component.html
+++ b/src/app/views/features/contract/contract.component.html
@@ -94,8 +94,8 @@
             </td>
             <td>{{ contract.code }}</td>
             <td>{{ contract.account_name }}</td>
-            <td>{{ contract.start_date }}</td>
-            <td>{{ contract.end_date}}</td>
+            <td>{{ contract.start_date|date:'yyyy-MM-dd' }}</td>
+            <td>{{ contract.end_date|date:'yyyy-MM-dd'}}</td>
             <td>{{ contract.term }}</td>
             <td>
               <div class="flex justify-content-end">
@@ -189,7 +189,7 @@
         <br>
         <div class="mt-3 field">
           <label class="disable">{{(contract_form.controls['created_by'].value)}}</label>
-          <label class="ml-2 disable">{{(contract_form.controls['created_at'].value)}}</label>
+          <label class="ml-2 disable">{{(contract_form.controls['created_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
@@ -197,7 +197,7 @@
         <br>
         <div class="mt-3 field">
           <label class="disable">{{(contract_form.controls['updated_by'].value)}}</label>
-          <label class="ml-2 disable">{{(contract_form.controls['updated_at'].value)}}</label>
+          <label class="ml-2 disable">{{(contract_form.controls['updated_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
         </div>
       </div>
     </div>
