--- a/src/app/views/features/contract/view-contract/view-contract.component.html
+++ b/src/app/views/features/contract/view-contract/view-contract.component.html
@@ -22,11 +22,11 @@
             </div>
             <div class="col-12 flex justify-content-center">
               <label>契約開始日期: </label>
-              <label>{{contract_form.controls['start_date'].value}}</label>
+              <label>{{contract_form.controls['start_date'].value |date:'yyyy-MM-dd'}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
               <label>契約結束日期: </label>
-              <label>{{contract_form.controls['end_date'].value}}</label>
+              <label>{{contract_form.controls['end_date'].value |date:'yyyy-MM-dd'}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
               <label>有效期限(月): </label>
@@ -144,7 +144,7 @@
                     <tr>
                       <th>訂單編號</th>
                       <th>狀態</th>
-                      <!--<th>訂單金額</th>-->
+                      <th>訂單金額</th>
                       <th>訂單開始日期</th>
                       <th>契約號碼</th>
                       <th></th>
@@ -154,8 +154,8 @@
                     <tr>
                       <td>{{ contract_order.code }}</td>
                       <td>{{ contract_order.status }}</td>
-                      <!--<td>{{ order.amount }}</td>-->
-                      <td>{{ contract_order.start_date }}</td>
+                      <td>{{ contract_order.grand_total }}</td>
+                      <td>{{ contract_order.start_date |date:'yyyy-MM-dd'}}</td>
                       <td>{{ contract_order.contract_code }}</td>
                       <td>
                         <div class="flex justify-content-end">
@@ -243,7 +243,7 @@
                   <br>
                   <div class="mt-3 field">
                     <label class="disable">{{(contract_form.controls['created_by'].value)}}</label>
-                    <label class="ml-2 disable">{{(contract_form.controls['created_at'].value)}}</label>
+                    <label class="ml-2 disable">{{(contract_form.controls['created_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
@@ -251,7 +251,7 @@
                   <br>
                   <div class="mt-3 field">
                     <label class="disable">{{(contract_form.controls['updated_by'].value)}}</label>
-                    <label class="ml-2 disable">{{(contract_form.controls['updated_at'].value)}}</label>
+                    <label class="ml-2 disable">{{(contract_form.controls['updated_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
                   </div>
                 </div>
               </div>
@@ -282,9 +282,9 @@
                 </ng-template>
                 <ng-template pTemplate="body" let-contract_log>
                   <tr>
-                    <td>{{ contract_log.modified_at }}</td>
+                    <td>{{ contract_log.modified_at |date:'yyyy-MM-dd HH:mm'}}</td>
                     <td>{{ contract_log.modified_by }}</td>
-                    <td>{{ contract_log.description }}</td>
+                    <td>{{ contract_log.content }}{{ contract_log.value}}</td>
                   </tr>
                 </ng-template>
               </p-table>
@@ -354,7 +354,7 @@
           <br>
           <ng-container *ngIf="showedit && order_form.controls['status'].value?.name === '啟動中'">
             <label>{{(order_form.controls['activated_by'].value)}}</label>
-            <label>{{(order_form.controls['activated_at'].value)}}</label>
+            <label>{{(order_form.controls['activated_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
           </ng-container>
         </div>
       </div>
@@ -369,7 +369,7 @@
         <br>
         <div class="mt-3 field">
           <label class="disable">{{(order_form.controls['created_by'].value)}}</label>
-          <label class="ml-2 disable">{{(order_form.controls['created_at'].value)}}</label>
+          <label class="ml-2 disable">{{(order_form.controls['created_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
@@ -377,7 +377,7 @@
         <br>
         <div class="mt-3 field">
           <label class="disable">{{(order_form.controls['updated_by'].value)}}</label>
-          <label class="ml-2 disable">{{(order_form.controls['updated_at'].value)}}</label>
+          <label class="ml-2 disable">{{(order_form.controls['updated_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
         </div>
       </div>
     </div>
