--- a/src/app/views/features/order/view-order/view-order.component.html
+++ b/src/app/views/features/order/view-order/view-order.component.html
@@ -22,7 +22,7 @@
             </div>
             <div class="col-12 flex justify-content-center">
               <label>訂單開始日期: </label>
-              <label>{{GetOneStartDate}}</label>
+              <label>{{GetOneStartDate|date:'yyyy-MM-dd'}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
               <label>狀態: </label>
@@ -151,8 +151,7 @@
                   <div class="field">
                     <label><span class="required-star">*</span>訂單開始日期</label>
                     <p-calendar [appendTo]="'body'" dateFormat="yy-mm-dd" [showButtonBar]="true"
-                                formControlName="start_date"
-                                [minDate]="MinDate"
+                                formControlName="start_date" [minDate]="MinDate"
                                 [ngClass]="{'ng-dirty':order_form.controls['start_date'].hasError('required') && order_form.controls['start_date'].touched}"></p-calendar>
                     <div class="required-star" *ngIf="order_form.controls['start_date'].hasError('required-star')">
                       訂單開始日期不可早於契約日期
@@ -184,7 +183,7 @@
                     <br>
                     <ng-container *ngIf="stage =='啟動中'">
                       <label>{{ order_form.controls['activated_by'].value }}</label>
-                      <label>{{ order_form.controls['activated_at'].value }}</label>
+                      <label>{{ order_form.controls['activated_at'].value |date:'yyyy-MM-dd HH:mm'}}</label>
                     </ng-container>
                   </div>
                 </div>
@@ -199,7 +198,7 @@
                   <br>
                   <div class="mt-3 field">
                     <label class="disable">{{(order_form.controls['created_by'].value)}}</label>
-                    <label class="ml-2 disable">{{(order_form.controls['created_at'].value)}}</label>
+                    <label class="ml-2 disable">{{(order_form.controls['created_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
@@ -207,7 +206,7 @@
                   <br>
                   <div class="mt-3 field">
                     <label class="disable">{{(order_form.controls['updated_by'].value)}}</label>
-                    <label class="ml-2 disable">{{(order_form.controls['updated_at'].value)}}</label>
+                    <label class="ml-2 disable">{{(order_form.controls['updated_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
                   </div>
                 </div>
               </div>
@@ -237,9 +236,9 @@
                 </ng-template>
                 <ng-template pTemplate="body" let-order_log>
                   <tr>
-                    <td>{{ order_log.modified_at }}</td>
+                    <td>{{ order_log.modified_at |date:'yyyy-MM-dd HH:mm'}}</td>
                     <td>{{ order_log.modified_by }}</td>
-                    <td>{{ order_log.description }}</td>
+                    <td>{{ order_log.content }}{{ order_log.value }}</td>
                   </tr>
                 </ng-template>
               </p-table>
@@ -474,7 +473,7 @@
         <br>
         <div class="mt-3 field">
           <label class="disable">{{(edit_product_form.controls['created_by'].value)}}</label>
-          <label class="ml-2 disable">{{(edit_product_form.controls['created_at'].value)}}</label>
+          <label class="ml-2 disable">{{(edit_product_form.controls['created_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
@@ -482,7 +481,7 @@
         <br>
         <div class="mt-3 field">
           <label class="disable">{{(edit_product_form.controls['updated_by'].value)}}</label>
-          <label class="ml-2 disable">{{(edit_product_form.controls['updated_at'].value)}}</label>
+          <label class="ml-2 disable">{{(edit_product_form.controls['updated_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
         </div>
       </div>
     </div>
