--- a/src/app/views/features/quote/quote.component.html
+++ b/src/app/views/features/quote/quote.component.html
@@ -86,7 +86,7 @@
             <td>{{ quote.name }}</td>
             <td>{{ quote.opportunity_name }}</td>
             <td>{{ quote.syncing }}</td>
-            <td>{{ quote.expiration_date }}</td>
+            <td>{{ quote.expiration_date|date:'yyyy-MM-dd' }}</td>
             <td>{{ quote.sub_total }}</td>
             <td>{{ quote.grand_total }}</td>
             <td>
@@ -213,7 +213,7 @@
         <br>
         <div class="mt-3 field">
           <label class="disable">{{(quote_form.controls['created_by'].value)}}</label>
-          <label class="ml-2 disable">{{(quote_form.controls['created_at'].value)}}</label>
+          <label class="ml-2 disable">{{(quote_form.controls['created_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
@@ -221,7 +221,7 @@
         <br>
         <div class="mt-3 field">
           <label class="disable">{{(quote_form.controls['updated_by'].value)}}</label>
-          <label class="ml-2 disable">{{(quote_form.controls['updated_at'].value)}}</label>
+          <label class="ml-2 disable">{{(quote_form.controls['updated_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
         </div>
       </div>
     </div>
