--- a/src/app/views/features/quote/view-quote/view-quote.component.html
+++ b/src/app/views/features/quote/view-quote/view-quote.component.html
@@ -282,7 +282,7 @@
                   <br>
                   <div class="mt-3 field">
                     <label class="disable">{{(quote_form.controls['created_by'].value)}}</label>
-                    <label class="ml-2 disable">{{(quote_form.controls['created_at'].value)}}</label>
+                    <label class="ml-2 disable">{{(quote_form.controls['created_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
@@ -290,7 +290,7 @@
                   <br>
                   <div class="mt-3 field">
                     <label class="disable">{{(quote_form.controls['updated_by'].value)}}</label>
-                    <label class="ml-2 disable">{{(quote_form.controls['updated_at'].value)}}</label>
+                    <label class="ml-2 disable">{{(quote_form.controls['updated_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
                   </div>
                 </div>
               </div>
@@ -320,11 +320,11 @@
                     <th>描述</th>
                   </tr>
                 </ng-template>
-                <ng-template pTemplate="body" let-contract_log>
+                <ng-template pTemplate="body" let-quote_log>
                   <tr>
-                    <td>{{ contract_log.modified_at }}</td>
-                    <td>{{ contract_log.modified_by }}</td>
-                    <td>{{ contract_log.description }}</td>
+                    <td>{{ quote_log.modified_at|date:'yyyy-MM-dd HH:mm'}}</td>
+                    <td>{{ quote_log.modified_by }}</td>
+                    <td>{{ quote_log.content }}{{ quote_log.value}}</td>
                   </tr>
                 </ng-template>
               </p-table>
@@ -585,7 +585,7 @@
         <br>
         <div class="mt-3 field">
           <label class="disable">{{(quote_product_form.controls['created_by'].value)}}</label>
-          <label class="ml-2 disable">{{(quote_product_form.controls['created_at'].value)}}</label>
+          <label class="ml-2 disable">{{(quote_product_form.controls['created_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
@@ -593,7 +593,7 @@
         <br>
         <div class="mt-3 field">
           <label class="disable">{{(quote_product_form.controls['updated_by'].value)}}</label>
-          <label class="ml-2 disable">{{(quote_product_form.controls['updated_at'].value)}}</label>
+          <label class="ml-2 disable">{{(quote_product_form.controls['updated_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
         </div>
       </div>
     </div>
