--- a/src/app/views/features/contact/contact.component.html
+++ b/src/app/views/features/contact/contact.component.html
@@ -66,8 +66,8 @@
         <div class="field">
           <label><span class="text-red-600">*</span>帳戶</label>
           <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)" formControlName="account_name"
-                      [filter]="true" optionLabel="label" appendTo="body"
-                      filterBy="label" [showClear]="true" placeholder="選擇現有帳戶"
+                      [filter]="true" optionLabel="label" appendTo="body" (onLazyLoad)="loadAccount($event)" [lazy]="true"
+                      filterBy="label" [showClear]="true" placeholder="選擇現有帳戶" [virtualScroll]="true" [virtualScrollItemSize]="38"
                       [ngClass]="{'ng-dirty':contact_form.controls['account_name'].hasError('required') && contact_form.controls['account_name'].touched}">
           </p-dropdown>
         </div>
