--- a/src/app/views/features/role/role/role.component.html
+++ b/src/app/views/features/role/role/role.component.html
@@ -1,30 +1,144 @@
 <div class="flex justify-content-center">
-  <div class="col-12 md:col-12 lg:col-12">
+  <div class="col-10 md:col-10 lg:col-10">
     <p-card>
+<!--      <h2>角色管理</h2>-->
+<!--      <div class="grid">-->
+<!--        <div class="col-12 md:col-5 lg:col-5">-->
+<!--          <p-table #dt1 responsiveLayout="scroll" dataKey="role_id" [rows]="10" [value]="order"-->
+<!--                   [showCurrentPageReport]="true" [rowsPerPageOptions]="[5,10,20]" sortField="created_at"-->
+<!--                   [sortOrder]="-1"-->
+<!--                   styleClass="p-datatable-gridlines" [paginator]="true"-->
+<!--                   currentPageReportTemplate="從 {first} 到 {last} 筆，共 {totalRecords} 筆"-->
+<!--                   [globalFilterFields]="['role_name']">-->
+<!--            <ng-template pTemplate="caption">-->
+<!--              <div class="flex">-->
+<!--            <span class="p-input-icon-left ml-auto">-->
+<!--              <i class="pi pi-search"></i>-->
+<!--              <input pInputText type="text"-->
+<!--                     placeholder="搜尋角色名稱">-->
+<!--            </span>-->
+<!--              </div>-->
+<!--            </ng-template>-->
+<!--            <ng-template pTemplate="header">-->
+<!--              <tr>-->
+<!--                <th style="width: 3rem" pSortableColumn="role_name">角色名稱-->
+<!--                  <p-sortIcon field="role_name"></p-sortIcon>-->
+<!--                </th>-->
+<!--                <th style="width: 3rem" pSortableColumn="created_at">建立時間-->
+<!--                  <p-sortIcon field="created_at"></p-sortIcon>-->
+<!--                </th>-->
+<!--                <th></th>-->
+<!--              </tr>-->
+<!--            </ng-template>-->
+<!--            <ng-template pTemplate="body" let-role>-->
+<!--              <tr>-->
+<!--                <td>-->
+<!--                  {{role.role_name}}-->
+<!--                </td>-->
+<!--                <td>-->
+<!--                  {{role.created_at | date: 'yyyy-MM-dd HH:mm'}}-->
+<!--                </td>-->
+<!--                <td>-->
+<!--                  <div class="btn-group">-->
+<!--                    <p-button label="修改" styleClass="p-button-success"></p-button>-->
+<!--                    &lt;!&ndash; <button (click)="confirmForDelete(role)" pButton pRipple type="button"-->
+<!--                      class="p-button-danger">刪除</button> &ndash;&gt;-->
+<!--                  </div>-->
+<!--                </td>-->
+<!--              </tr>-->
+<!--            </ng-template>-->
+<!--            <ng-template pTemplate="emptymessage">-->
+<!--              <tr>-->
+<!--                <td colspan="4">找不到角色資料</td>-->
+<!--              </tr>-->
+<!--            </ng-template>-->
+<!--          </p-table>-->
+<!--        </div>-->
+<!--        <div class="col-12 md:col-7 lg:col-7">-->
+<!--          <ng-template pTemplate="header">-->
+<!--            <h2>-->
+<!--              <ng-container>-->
+<!--                新增角色-->
+<!--              </ng-container>-->
+<!--              <ng-template #editRole>-->
+<!--                修改角色-->
+<!--              </ng-template>-->
+<!--            </h2>-->
+<!--          </ng-template>-->
+<!--          <form [formGroup]="roleForm">-->
+<!--            <div class="flex mt-4 justify-content-center">-->
+<!--              <h2>權限列表</h2>-->
+<!--            </div>-->
+<!--            <div class="flex justify-content-end">-->
+<!--              <div class="field">-->
+<!--                <input type="text" pInputText formControlName="role_name" placeholder="請輸入名稱"-->
+<!--                       [ngClass]="{'ng-dirty':( roleForm.controls['role_name'].hasError('required')&& roleForm.controls['role_name'].touched)}">-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <p-divider></p-divider>-->
+<!--            <label class="font-bold text-2xl">角色</label>-->
+<!--            <div class="col-12 md:col-6 lg:col-6 inline" formGroupName="permissions">-->
+<!--              <div class="field mt-3 flex">-->
+<!--                <p-checkbox [binary]="true" formControlName="role_create" label="新增"-->
+<!--                            class="flex-1 font-bold text-xl"></p-checkbox>-->
+<!--                <p-checkbox [binary]="true" formControlName="role_read" label="查詢"-->
+<!--                            class="flex-1 font-bold text-xl"></p-checkbox>-->
+<!--                <p-checkbox [binary]="true" formControlName="role_update" label="修改"-->
+<!--                            class="flex-1 font-bold text-xl"></p-checkbox>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <p-divider></p-divider>-->
+<!--            <label class="font-bold text-2xl">權限</label>-->
+<!--            <div class="col-12 md:col-6 lg:col-6 inline" formGroupName="permissions">-->
+<!--              <div class="field mt-3 flex">-->
+<!--                <p-checkbox [binary]="true" formControlName="empowerment" label="賦權"-->
+<!--                            class="flex-1 font-bold text-xl"></p-checkbox>-->
+<!--                <p-checkbox [binary]="true" formControlName="suspension" label="停權"-->
+<!--                            class="flex-1 font-bold text-xl"></p-checkbox>-->
+<!--                <p-checkbox [binary]="true" formControlName="examine" label="審核"-->
+<!--                            class="flex-1 font-bold text-xl"></p-checkbox>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <p-divider></p-divider>-->
+<!--            <label class="font-bold text-2xl">後台帳號管理頁</label>-->
+<!--            <div class="col-12 md:col-6 lg:col-6 inline" formGroupName="permissions">-->
+<!--              <div class="field mt-3 flex">-->
+<!--                <p-checkbox [binary]="true" formControlName="admin_create" label="新增"-->
+<!--                            class="flex-1 font-bold text-xl"></p-checkbox>-->
+<!--                <p-checkbox [binary]="true" formControlName="admin_read" label="查詢"-->
+<!--                            class="flex-1 font-bold text-xl"></p-checkbox>-->
+<!--                <p-checkbox [binary]="true" formControlName="admin_update" label="修改"-->
+<!--                            class="flex-1 font-bold text-xl"></p-checkbox>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <div class="flex justify-content-end">-->
+<!--              <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>-->
+<!--              <ng-container>-->
+<!--                <p-button label="新增" styleClass="p-button-info"></p-button>-->
+<!--              </ng-container>-->
+<!--&lt;!&ndash;              <ng-container>&ndash;&gt;-->
+<!--&lt;!&ndash;                <p-button label="儲存"&ndash;&gt;-->
+<!--&lt;!&ndash;                          styleClass="p-button-info"></p-button>&ndash;&gt;-->
+<!--&lt;!&ndash;              </ng-container>&ndash;&gt;-->
+<!--            </div>-->
+<!--          </form>-->
+<!--        </div>-->
+<!--      </div>-->
       <h2>角色管理</h2>
-      <div class="grid">
-        <div class="col-12 md:col-5 lg:col-5">
+      <p-accordion [multiple]="true">
+        <p-accordionTab header="經理">
           <p-table #dt1 responsiveLayout="scroll" dataKey="role_id" [rows]="10" [value]="order"
                    [showCurrentPageReport]="true" [rowsPerPageOptions]="[5,10,20]" sortField="created_at"
                    [sortOrder]="-1"
                    styleClass="p-datatable-gridlines" [paginator]="true"
                    currentPageReportTemplate="從 {first} 到 {last} 筆，共 {totalRecords} 筆"
                    [globalFilterFields]="['role_name']">
-            <ng-template pTemplate="caption">
-              <div class="flex">
-            <span class="p-input-icon-left ml-auto">
-              <i class="pi pi-search"></i>
-              <input pInputText type="text"
-                     placeholder="搜尋角色名稱">
-            </span>
-              </div>
-            </ng-template>
             <ng-template pTemplate="header">
               <tr>
-                <th style="width: 3rem" pSortableColumn="role_name">角色名稱
+                <th pSortableColumn="role_name">角色名稱
                   <p-sortIcon field="role_name"></p-sortIcon>
                 </th>
-                <th style="width: 3rem" pSortableColumn="created_at">建立時間
+                <th pSortableColumn="created_at">建立時間
                   <p-sortIcon field="created_at"></p-sortIcon>
                 </th>
                 <th></th>
@@ -53,77 +167,8 @@
               </tr>
             </ng-template>
           </p-table>
-        </div>
-        <div class="col-12 md:col-7 lg:col-7">
-          <ng-template pTemplate="header">
-            <h2>
-              <ng-container>
-                新增角色
-              </ng-container>
-              <ng-template #editRole>
-                修改角色
-              </ng-template>
-            </h2>
-          </ng-template>
-          <form [formGroup]="roleForm">
-            <div class="flex mt-4 justify-content-center">
-              <h2>權限列表</h2>
-            </div>
-            <div class="flex justify-content-end">
-              <div class="field">
-                <input type="text" pInputText formControlName="role_name" placeholder="請輸入名稱"
-                       [ngClass]="{'ng-dirty':( roleForm.controls['role_name'].hasError('required')&& roleForm.controls['role_name'].touched)}">
-              </div>
-            </div>
-            <p-divider></p-divider>
-            <label class="font-bold text-2xl">角色</label>
-            <div class="col-12 md:col-6 lg:col-6 inline" formGroupName="permissions">
-              <div class="field mt-3 flex">
-                <p-checkbox [binary]="true" formControlName="role_create" label="新增"
-                            class="flex-1 font-bold text-xl"></p-checkbox>
-                <p-checkbox [binary]="true" formControlName="role_read" label="查詢"
-                            class="flex-1 font-bold text-xl"></p-checkbox>
-                <p-checkbox [binary]="true" formControlName="role_update" label="修改"
-                            class="flex-1 font-bold text-xl"></p-checkbox>
-              </div>
-            </div>
-            <p-divider></p-divider>
-            <label class="font-bold text-2xl">權限</label>
-            <div class="col-12 md:col-6 lg:col-6 inline" formGroupName="permissions">
-              <div class="field mt-3 flex">
-                <p-checkbox [binary]="true" formControlName="empowerment" label="賦權"
-                            class="flex-1 font-bold text-xl"></p-checkbox>
-                <p-checkbox [binary]="true" formControlName="suspension" label="停權"
-                            class="flex-1 font-bold text-xl"></p-checkbox>
-                <p-checkbox [binary]="true" formControlName="examine" label="審核"
-                            class="flex-1 font-bold text-xl"></p-checkbox>
-              </div>
-            </div>
-            <p-divider></p-divider>
-            <label class="font-bold text-2xl">後台帳號管理頁</label>
-            <div class="col-12 md:col-6 lg:col-6 inline" formGroupName="permissions">
-              <div class="field mt-3 flex">
-                <p-checkbox [binary]="true" formControlName="admin_create" label="新增"
-                            class="flex-1 font-bold text-xl"></p-checkbox>
-                <p-checkbox [binary]="true" formControlName="admin_read" label="查詢"
-                            class="flex-1 font-bold text-xl"></p-checkbox>
-                <p-checkbox [binary]="true" formControlName="admin_update" label="修改"
-                            class="flex-1 font-bold text-xl"></p-checkbox>
-              </div>
-            </div>
-            <div class="flex justify-content-end">
-              <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
-              <ng-container>
-                <p-button label="新增" styleClass="p-button-info"></p-button>
-              </ng-container>
-<!--              <ng-container>-->
-<!--                <p-button label="儲存"-->
-<!--                          styleClass="p-button-info"></p-button>-->
-<!--              </ng-container>-->
-            </div>
-          </form>
-        </div>
-      </div>
+        </p-accordionTab>
+      </p-accordion>
     </p-card>
   </div>
 </div>
