--- a/src/app/views/components/login/login.component.scss
+++ b/src/app/views/components/login/login.component.scss
@@ -1,4 +1,3 @@
-//@import 'src/app/app.component.scss';
 @import "primeicons/primeicons.css";
 
 :host ::ng-deep {
@@ -85,82 +84,66 @@
     box-shadow: inset 3px 3px 6px #b5b5b5,
     inset -3px -3px 6px #ffffff;
   }
+
+  .p-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    box-shadow: 12px 18px 30px rgba(0, 0, 0, 0.2);
+    background: #FFFFFF;
+
+    .p-card-body {
+      padding: 2.3rem;
+    }
+
+    .front, .back {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .front {
+      transform: rotateY(0deg);
+      transform-origin: right;
+    }
+
+    .back {
+      transform: rotateY(180deg);
+      transform-origin: right;
+    }
+  }
 }
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 7cm;
-}
-
-.form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transform-style: preserve-3d;
-  margin-top: 5%;
-  transition: .4s ease-in-out;
-  border-radius: 30px;
-}
-
-.form .form_front {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  position: absolute;
-  backface-visibility: hidden;
-  padding: 65px 45px;
-  border-radius: 20px;
-  box-shadow: 12px 18px 30px rgba(0, 0, 0, 0.2);
-  background: #FFFFFF;
-}
-
-.form .form_back {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  position: absolute;
-  backface-visibility: hidden;
-  transform: rotateY(-180deg);
-  padding: 65px 45px;
-  border-radius: 20px;
-  box-shadow: 12px 18px 30px rgba(0, 0, 0, 0.2);
-  background: #FFFFFF;
-}
-
-.form_details {
-  font-size: 25px;
-  font-weight: 600;
-  padding-bottom: 5px;
-}
-
-.form .switch {
-  font-size: 13px;
-}
-
-.form .switch .signup_tog {
-  font-weight: 700;
+.text-button {
+  background: none;
+  border: none;
+  color: #000000;
   cursor: pointer;
-  text-decoration-line: underline;
+  text-decoration: underline;
 }
 
-.container #signup_toggle {
-  display: none;
+.text-button {
+  background: none;
+  border: none;
+  color: #000000;
+  cursor: pointer;
+  text-decoration: underline;
 }
 
-.container #signup_toggle:checked + .form {
-  transform: rotateY(-180deg);
+.card-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
 }
 
-.img{
-  margin-top: -10%;
-  margin-bottom: 10%;
+.flip-front {
+  transform: rotateY(180deg);
 }
-
