fix: #43 刪除商機時變更線索狀態

--- a/src/app/views/features/lead/view-lead/view-lead.component.html
+++ b/src/app/views/features/lead/view-lead/view-lead.component.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="col-12 md:col-6 lg:col-6 mt-5">
                   <ng-container *ngIf="status_value==='發展中'">
-                    <p-button pTooltip="轉換" (click)="showDialog(lead_form.value)" tooltipPosition="top" icon="pi pi-sync"
+                    <p-button pTooltip="轉換" (click)="showDialog()" tooltipPosition="top" icon="pi pi-sync"
                               styleClass="p-button-rounded p-button-secondary p-button-text p-button-lg "></p-button>
                   </ng-container>
                 </div>
